api/stderr.log
  File "/home/webmyqog/api/passenger_wsgi.py", line 9
    application = wsgi.app:app
                          ^
SyntaxError: invalid syntax
  File "/home/webmyqog/api/passenger_wsgi.py", line 9
    application = wsgi.app:app
                          ^
SyntaxError: invalid syntax
  File "/home/webmyqog/api/passenger_wsgi.py", line 9
    application = wsgi.app:app
                          ^
SyntaxError: invalid syntax
  File "/home/webmyqog/api/passenger_wsgi.py", line 9
    application = wsgi.app:app
                          ^
SyntaxError: invalid syntax
